# ComputerStructures

./: .gitignore
HW1/: CMakeLists.txt  bp.cpp  bp_main  comp.sh  makefile  out18.txt  out3.txt  temp.txt  ult_compare.sh
HW1/input_examples/: example1.trc  example1_shai.trc  test1003.in
HW2/: CMakeLists.txt  cacheSim  cacheSim.cpp  cacheSimNoam.cpp  cacheSimRoy.cpp  cacheSimShelly.cpp  cacheSimShellyold.cpp  temp.txt
HW2/examples/: CacheSim  CacheSimDebug  example3_out.debug  test2.in  test3.in  ult_compare.sh
HW2/tests/: CacheSim  CacheSimDebug  cacheSim  example10_command  example11_command  example12_command  example13_command  example14_command  example15_command  example16_command  example17_command  example18_command  example19_command  example1_command  example1_trace  example20_command  example2_command  example3_command  example4_command  example5_command  example6_command  example7_command  example8_command  example9_command  ult_compare.sh
HW3/: CMakeLists.txt  dflow_calc  dflow_calc.cpp  dflow_calc.h  dflow_main.c  makefile  ult_compare.sh
HW3/examples/: example1.in
HW3/ref_results/: example10_output  example11_output  example12_output  example13_output  example14_output  example15_output  example16_output  example17_output  example18_output  example19_output  example1_output  example20_output  example2_output  example3_output  example4_output  example5_output  example6_output  example7_output  example8_output  example9_output
HW3/tests/: example10.in  example11.in  example12.in  example13.in  example14.in  example15.in  example16.in  example17.in  example18.in  example19.in  example2.in  example20.in  example3.in  example4.in  example5.in  example6.in  example7.in  example8.in  example9.in
HW4/: CMakeLists.txt  core_api.cpp  main.c  sim_main  temp.txt  ult_compare.sh
HW4/tests/: example1.img  sim_main  test1.img  test1007.img  test1161.img  test2.img
